# MyGiri-backend

./: .env  .gitignore  Cargo.toml  Procfile  docker-compose.yml
config/: init.sql
sql-client/: Cargo.toml
sql-client/config/: init.sql
sql-client/src/: answer_client.rs  lib.rs  login_history_client.rs  models.rs  profile_client.rs  theme_client.rs  user_client.rs  vote_client.rs
sql-client/tests/: test_answer.rs  test_login_history.rs  test_profile.rs  test_theme.rs  test_user.rs  test_vote.rs
sql-client/tests/utils/: mod.rs
src/: constants.rs  errors.rs  lib.rs  main.rs  middleware.rs  utils.rs
src/config/: app.rs  db.rs
src/models/: answer.rs  login.rs  mod.rs  profile.rs  response.rs  theme.rs  user.rs  vote.rs
src/scripts/: mod.rs  tweet_info.rs  update_profile.rs
src/server/: answer_api.rs  mod.rs  profile_api.rs  theme_api.rs  user_api.rs  vote_api.rs
src/service/: answer_service.rs  auth_service.rs  login_service.rs  mod.rs  profile_service.rs  theme_service.rs  user_service.rs  vote_service.rs
tests/: test_auth.rs
tests/utils/: mod.rs
