[package]
name = "actix-backend"
version = "0.1.0"
authors = ["nebocco <nebocco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "*"
actix-cors = "0.5"
async-std = { version="1.9", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "*"
env_logger = "*"
jsonwebtoken = "*"
log = "0.4"
once_cell = "1.8"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-rustls", "uuid", "chrono"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

# SQL
sql-client = { path = "./sql-client" }