[package]
name = "actix-backend"
version = "0.1.0"
authors = ["nebocco <nebocco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.2.0"
actix-cors = "0.5.4"
anyhow = "1.0.42"
async-std = { version="1.9.0", features = ["attributes"] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.4"
hmac-sha1 = "0.1.3"
jsonwebtoken = "7.2.0"
log = "0.4.14"
once_cell = "1.8.0"
percent-encoding = "2.1.0"
rand = "0.8.4"
rust-argon2 = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
sqlx = { version = "0.5.5", features = ["postgres", "runtime-async-std-rustls", "uuid", "chrono"] }
surf = "2.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

# SQL
sql-client = { path = "./sql-client" }