[package]
name = "sql-client"
version = "0.1.0"
authors = ["nebocco <nebocco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-rustls", "uuid", "chrono"] }
serde = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-std = { version="1.9", features = ["attributes"] }
async-trait = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }